--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Goals.js?FGDAC=175050743"></script>
+        <script type="text/javascript" src="html5game/Goals.js?XIBYB=698895923"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
