--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
             }
             div.gm4html5_div_class
             {
-              position: fixed;
-              top: 50%;
-              left: 50%;
-              margin-left: -960px;
-              margin-top: -540px;
+              margin: 0px;
               padding: 0px;
               border: 0px;
             }
@@ -83,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Goals.js?INLZB=841632478"></script>
+        <script type="text/javascript" src="html5game/Goals.js?NJCYB=1497417835"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
