--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Goals.js?FMFBC=194693614"></script>
+        <script type="text/javascript" src="html5game/Goals.js?GNBBC=2090134271"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
