--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     <body>
         <div class="gm4html5_div_class" id="gm4html5_div_id">
             <!-- Create the canvas element the game draws to -->
-            <canvas id="canvas" width="1920" height="1080">
+            <canvas id="canvas" width="1600" height="900">
                <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Goals.js?GNBBC=2090134271"></script>
+        <script type="text/javascript" src="html5game/Goals.js?KJYAC=1097809881"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
