--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
             }
             div.gm4html5_div_class
             {
-              margin: 0px;
+              position: fixed;
+              top: 50%;
+              left: 50%;
+              margin-left: -800px;
+              margin-top: -450px;
               padding: 0px;
               border: 0px;
             }
@@ -79,7 +83,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Goals.js?KJYAC=1097809881"></script>
+        <script type="text/javascript" src="html5game/Goals.js?WKIZB=2127925549"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
