--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Goals.js?NQEYB=2144324990"></script>
+        <script type="text/javascript" src="html5game/Goals.js?UGFAC=907254435"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
