--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Goals.js?UGFAC=907254435"></script>
+        <script type="text/javascript" src="html5game/Goals.js?WETYB=1940759248"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
