--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
                width: 100%;
                height: 100%;
             }
+            @media screen and (max-width: 1919px) {
+            body {
+                zoom: .85;
+            }
+            }
+            @media screen and (max-width: 1500px) {
+            body {
+                zoom: .75;
+            }
+            }
+            @media screen and (max-width: 1200px) {
+            body {
+                zoom: .65;
+            }
+            }
         </style>
     </head>
 
@@ -84,7 +99,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Goals.js?WETYB=1940759248"></script>
+        <script type="text/javascript" src="html5game/Goals.js?ASHAC=1581412973"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
